--- a/projetin/estilo.css
+++ b/projetin/estilo.css
@@ -1,15 +1,36 @@
-@import url("https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+/*
+Cores:
+861388 roxo
+9EA3B0 cinza
+E2EB98 amarelo
+F15025 laranja
+210203 preto
+*/
+
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
-  background-image: radial-gradient(circle at bottom, #468eec, #66a8ff);
-  font-family: 'Shantell Sans', cursive;
+  background-image: radial-gradient(circle at bottom, #e2eb98, #a34328);
+  font-family: 'Rubik', sans-serif;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.336);
+}
+input {
+  box-shadow: 1px 2px 5px #000000;
+}
+.button{
+  background-color: #861388;
+  color: white;
+  font-size: 15px;
+  text-shadow: 1px 1px 2px #000000;
+  padding: 2px;
 }
 
 h1 {
-  color: #392b58;
+  color: #861388;
   font-size: 2rem;
   text-align: center;
-  text-shadow: 1px 1px 2px #251c3a88;
+  text-shadow: 2px 1px 4px #49161688;
+  font-weight: bold;
 }
 
 html {
@@ -71,19 +92,21 @@ header {
   text-align: center;
 }
 #res {
-  color: rgb(28, 14, 104);
   font-size: 22px;
+  text-shadow: 1px 1px 2px #861388;
 }
 
 select {
-  font-family: 'Shantell Sans', cursive;
-  background-color: #392b58;
-  color: white;
+  background-color: #5c613a86;
+  color: #210203;
+  width: 200px;
+  font-size: 16px;
+  text-shadow: 1px 1px 2px black;
+  padding: 2px;
 }
 
 section {
-  background: #1dac5d;
-  color: rgb(192, 235, 236);
+  background: #9ea3b0;
   font-size: 20px;
   border-radius: 10px;
   padding: 15px;
