--- a/estilo.css
+++ b/estilo.css
@@ -103,6 +103,7 @@ select {
   font-size: 16px;
   text-shadow: 1px 1px 2px black;
   padding: 2px;
+  box-shadow: 1px 2px 5px #000000;
 }
 
 section {
