--- a/estilo.css
+++ b/estilo.css
@@ -10,19 +10,31 @@ F15025 laranja
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
-  background-image: radial-gradient(circle at bottom, #e2eb98, #a34328);
-  font-family: 'Rubik', sans-serif;
+  background-image: radial-gradient(
+    circle at right bottom,
+    #623794,
+    #226975,
+    #0c551c
+  );
+  font-family: "Rubik", sans-serif;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.336);
 }
 input {
   box-shadow: 1px 2px 5px #000000;
 }
-.button{
+
+.button {
   background-color: #861388;
   color: white;
   font-size: 15px;
   text-shadow: 1px 1px 2px #000000;
   padding: 2px;
+  cursor: pointer;
+}
+
+.button:hover {
+  transform: scale(1.1);
+  background-color: #600e61;
 }
 
 h1 {
@@ -103,7 +115,14 @@ select {
   font-size: 16px;
   text-shadow: 1px 1px 2px black;
   padding: 2px;
-  box-shadow: 1px 2px 5px #000000;
+}
+
+select:hover {
+  transform: scale(1.05);
+}
+
+select > option:hover {
+  background-color: #383b2286;
 }
 
 section {
